--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -6,7 +6,8 @@ on:
   pull_request:
   schedule:
     # do a build every day
-    - cron: "1 1 * * *"
+   # - cron: "1 1 * * *"
+   on: workflow_dispatch
 jobs:
   ufbt-build-action:
     runs-on: ubuntu-latest
