--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -6,8 +6,7 @@ on:
   pull_request:
   schedule:
     # do a build every day
-   # - cron: "1 1 * * *"
-   on: workflow_dispatch
+    - cron: "1 1 * * *"
 jobs:
   ufbt-build-action:
     runs-on: ubuntu-latest
